# job-search-agent

./: .env.example  .gitignore  ACHIEVEMENTS.md  AGENT_FIX_REPORT.md  AGENT_ROOT_CAUSE_ANALYSIS.md  AGENT_STABILITY_REPORT.md  API.md  API_VALIDATION_AFTER_FIXES.md  ARCHITECTURE.md  BUG_FIX_REPORT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  ENDPOINT_FAILURE_ANALYSIS.md  EPICS_AND_TASKS.md  FINAL_LAUNCH_DECISION.md  FINAL_PRODUCTION_REPORT.md  FRONTEND_IMPLEMENTATION_PLAN.md  IMPLEMENTATION.md  INTERVIEW_GUIDE.md  LAUNCH_CHECKLIST.md  LICENSE  MEMORY.md  Makefile  PRD.md  README.md  RECRUITER_PITCH.md  REVIEW.md  RUNBOOK.md  SECURITY.md  SPRINT_1.md  SPRINT_5.md  SPRINT_5_REVIEW.md  SPRINT_7_REVIEW.md  SPRINT_8_REMEDIATION.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  010_tailored_resumes.py  011_fix_knowledge_tsv.py  012_384d_embeddings.py
docs/: BACKUP_AND_RECOVERY.md  FIRST_RUN_GUIDE.md  FRONTEND_ARCHITECTURE.md  MONITORING.md  PROJECT_SUMMARY.md  RESUME_PROJECT_DESCRIPTION.md  SYSTEM_DIAGRAMS.md
docs/architecture/: high-level-architecture.mmd
docs/archive/: AGENTS.md  ARCHITECTURE_AUDIT.md  CODEBASE.md  CODEBASE_AUDIT.md  DATABASE.md  FINAL_ARCHITECTURE.md  PRODUCTION_ENDPOINT_MATRIX.md  PRODUCTION_READINESS_AUDIT.md  SPRINT_2.md  SPRINT_3.md  SPRINT_4.md  SPRINT_4_REMEDIATION.md  SPRINT_4_REVIEW.md  SPRINT_5_REMEDIATION.md  SPRINT_6.md  SPRINT_6_REMEDIATION.md  SPRINT_6_REVIEW.md  SPRINT_7.md  SPRINT_7_FINAL.md  SPRINT_7_REMEDIATION.md  SPRINT_7_REMEDIATION_REVIEW.md  SPRINT_8.md  SPRINT_8_REVIEW.md  SPRINT_9.md  (+1 more)
scripts/: demo_user_journey.py  hostile_qa.py  phase1_agent_reliability.py  phase1_agent_results.json  phase2_resume_results.json  phase2_resume_validation.py  phase3_rag_results.json  phase3_rag_validation.py  phase4_security_results.json  phase4_security_validation.py  phase5_api_matrix.json  phase5_api_matrix.py  qa_50_scenarios.py  qa_results.json  sample_knowledge.txt  seed_demo_data.py  test_skill_extraction.py  user_acceptance_test.py
tests/: conftest.py
(+133 files in other folders)
