[project]
name = "pathfinder"
version = "0.1.0"
description = "Autonomous AI Career Agent"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    "redis[hiredis]>=5.2",
    "celery>=5.4",
    "langgraph>=0.3",
    "langgraph-checkpoint-postgres>=0.1",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.28",
    "python-multipart>=0.0",
    "structlog>=24.4",
    "tenacity>=9.0",
    "python-jose[cryptography]>=3.3",
    "argon2-cffi>=23.1",
    "alembic>=1.14",
    "PyPDF2>=3.0",
    "python-docx>=1.1",
    "sentry-sdk>=2.19",
    "prometheus-client>=0.21",
    "jsonschema>=4.23",
    "tiktoken>=0.7",
    "sentence-transformers>=2.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "black>=24.10",
    "ruff>=0.8",
    "mypy>=1.13",
    "aiosqlite>=0.22",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4", "SIM", "UP", "ARG"]

[tool.mypy]
strict = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
